# wiktionary-dump-downloader

./: .gitignore  pyproject.toml
wiktionary_dump_downloader/: __init__.py  download_html_dump.py  fast_download.py
